--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "sass": "^1.37.5",
-    "web-vitals": "^1.1.2"
+    "sass": "^1.37.5"
   },
   "scripts": {
     "start": "react-scripts start",
